--- a/Biblio/historicalData.bib
+++ b/Biblio/historicalData.bib
@@ -2,6 +2,16 @@
 
 
 
+@phdthesis{perret2016donnees,
+  title={Des donn{\'e}es spatio-temporelles aux dynamiques urbaines},
+  author={Perret, Julien},
+  year={2016},
+  school={Universit{\'e} Paris Est},
+  file={NetworksTerritories/HistoricalData/habilitation.pdf}
+}
+
+
+
 @article{bonin2016analyse,
   title={Analyse de la croissance de r{\'e}seaux de transport sur le moyen terme {\`a} partir de sources cartographiques: comment utiliser la carte de Cassini comme source de donn{\'e}es?},
   author={Bonin, Olivier},
