--- a/Docs/Communications/2022/AUM2022/slides.tex
+++ b/Docs/Communications/2022/AUM2022/slides.tex
@@ -116,12 +116,38 @@ Session 8: \\
 
 \sframe{Project research objectives}{
 
+% from slide kickoff
+% 1. Identification et qualification des sources pertinentes Catalogue de sources primaires
+%Qualification des sources et construction de méta-données
+%Publication en ligne en (linked) Open Data Modélisation des imperfections associées
+%2.1 et 2.2 Numérisation des sources
+%Thèse avec EPITA sur l’extraction semi-automatique du contenu
+%2.3 Géocodage des adresses
+%2.4 Validation, correction et enrichissement collaboratifs 3. Analyse des co-évolutions
+%Cartographie et géovisualisation des données et dynamiques associées
+%Plateforme ouverte collaborative permettant la traçabilité des processus et des données 2 ans d’Ingénieur de recherche
+
+
 }
 
 \sframe{Verniquet atlas accuracy}{
 
 % other work packages?
 % one slide on Verniquet georef - uncertainty: cool!
+
+
+
+
+\begin{columns}
+	\begin{column}{0.6\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/verniquet.png}
+	\end{column}
+	\begin{column}{0.4\textwidth}
+		
+	\end{column}
+\end{columns}
+
 
 }
 
@@ -172,6 +198,19 @@ Session 8: \\
 % -> example of Didot?
 
 %[9] Social dynamics in urban context. Open tools, models and data - Paris and its suburbs, 1789-1950. https://soduco.github.io/.
+
+
+\begin{columns}
+	\begin{column}{0.6\textwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/didot.png}
+	\end{column}
+	\begin{column}{0.4\textwidth}
+		
+	\end{column}
+\end{columns}
+
+
 
 
 }
