--- a/Docs/Communications/2022/AUM2022/slides.tex
+++ b/Docs/Communications/2022/AUM2022/slides.tex
@@ -83,7 +83,7 @@ $^{4}$UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 
 
 \date{\textbf{Applied Urban Modelling 2022 Symposium}\\
-Session 8: \\
+Session 8: New data, new methods, new fields (2)\\
 30/06/2020
 }
 
@@ -98,10 +98,11 @@ Session 8: \\
 
 \sframe{SoDUCo (Social Dynamics in Urban Context) ANR project}{
 
-\centering
+\begin{center}
+\includegraphics[height=0.85\textheight]{figures/soduco_presentation.png}
+\end{center}t
 
-\includegraphics[height=0.9\textheight]{figures/soduco_presentation.png}
-
+\url{https://soduco.github.io/}
 
 }
 
@@ -128,6 +129,34 @@ Session 8: \\
 %Plateforme ouverte collaborative permettant la traçabilité des processus et des données 2 ans d’Ingénieur de recherche
 
 
+\textbf{WP 1: Identification and qualification of relevant sources}
+
+\medskip
+
+$\rightarrow$ Catalog of primary sources; qualification of sources and metadata construction; online publication as Linked Open Data; modeling of uncertainties.
+
+\bigskip
+
+\textbf{WP 2: Digitalisation of sources}
+
+\medskip
+
+$\rightarrow$ Extraction of topographic data (2.1); extraction of socio-economic data (2.2); spatio-temporal geocoding (2.3); collaborative data correction, validation and enrichment (2.4).
+
+\bigskip
+
+\textbf{WP 3: Co-evolution analysis}
+
+\medskip
+
+$\rightarrow$ geovisualisation of data and associated dynamics.
+
+\bigskip
+
+\textbf{Tools: } collaborative open platform to ensure reproducibility and traceability of data and processes.
+
+
+
 }
 
 \sframe{Verniquet atlas accuracy}{
@@ -135,8 +164,12 @@ Session 8: \\
 % other work packages?
 % one slide on Verniquet georef - uncertainty: cool!
 
+% critically analyse the Verniquet Atlas and especially its planimetric accuracy. We want to assess its potential for use as a historical cartographic reference resource.
+% measurements and calculations provided with an accuracy of one tenth of a toise
 
-
+% to understand the processes used by Edme Verniquet and his engineers to draw up the map, to check the measurements and calculations made and, if necessary, to correct their errors,
+%to assess whether this map has a planimetric accuracy that is good enough for it to serve as a primary source to create a geohistorical reference dataset on the city of Paris at the end of the 18th century.
+% One of the results of the Verniquet workshop is the reconstitution of the parameters of the projected coordinate reference system defined and used by Edme Verniquet to draw up his map of Paris. This reference coordinate system was reused throughout the 19th century in many other maps of Paris.
 
 \begin{columns}
 	\begin{column}{0.6\textwidth}
