--- a/Docs/Communications/2022/AUM2022/biblio.bib
+++ b/Docs/Communications/2022/AUM2022/biblio.bib
@@ -1,6 +1,49 @@
 
 
 
+@article{brunsdon1998geographically,
+  title={Geographically weighted regression},
+  author={Brunsdon, Chris and Fotheringham, Stewart and Charlton, Martin},
+  journal={Journal of the Royal Statistical Society: Series D (The Statistician)},
+  volume={47},
+  number={3},
+  pages={431--443},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{raimbault2017identification,
+  title={Identification de causalit{\'e}s dans des donn{\'e}es spatio-temporelles},
+  author={Raimbault, Juste},
+  booktitle={Spatial Analysis and GEOmatics 2017},
+  year={2017}
+}
+
+@inproceedings{dupuy1987vers,
+  title={Vers une th{\'e}orie territoriale des r{\'e}seaux: une application au transport urbain},
+  author={Dupuy, Gabriel},
+  booktitle={Annales de g{\'e}ographie},
+  pages={658--679},
+  year={1987},
+  organization={JSTOR}
+}
+
+@incollection{pumain2018evolutionary,
+  title={An evolutionary theory of urban systems},
+  author={Pumain, Denise},
+  booktitle={International and transnational perspectives on urban systems},
+  pages={3--18},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{raimbault2019modeling,
+  title={Modeling interactions between transportation networks and territories: a co-evolution approach},
+  author={Raimbault, J.},
+  journal={arXiv preprint arXiv:1902.04802},
+  year={2019}
+}
+
 @article{el2022urban,
   title={Urban morphogenesis analysis based on geohistorical road data},
   author={El Gouj, Hanae and Rinc{\'o}n-Acosta, Christian and Lagesse, Claire},
