stemming:par_proc

--- a/Docs/Communications/2022/CCS2022/presentation/slides.tex
+++ b/Docs/Communications/2022/CCS2022/presentation/slides.tex
@@ -493,6 +493,7 @@ $\rightarrow$ On the sample dataset, $\tau = 1$ (3 exploitable dates)
 
 
 % estimate correlations on time windows - with optim of window size?
+% y-by-y diff, corrs / granger caus tests on moving window? OR smooth first (moving window), then tests? bof from thematic viewpoint - variations are fast for such economic activities?
 
 
 \centering
