--- a/Docs/Communications/2022/CCS2022/presentation/slides.tex
+++ b/Docs/Communications/2022/CCS2022/presentation/slides.tex
@@ -301,7 +301,7 @@ $\rightarrow$ Difficulty to build geo-historical data: geocoding \cite{cura2018h
 		
 		\bigskip
 		
-		$\rightarrow$ Named Entity Recognition to extract names, adresses, professions
+		$\rightarrow$ Named Entity Recognition to extract names, adresses, activities
 		
 		\bigskip
 		
@@ -324,7 +324,7 @@ $\rightarrow$ Difficulty to build geo-historical data: geocoding \cite{cura2018h
 % New stats
 
 
-$\rightarrow$ Data covering 1857-1908: XXX entries, X\% with coordinates.
+$\rightarrow$ Data covering 1857-1908: 4,218,048 entries, 80.32\% with coordinates and a defined activity.
 
 \bigskip
 
@@ -336,7 +336,7 @@ $\rightarrow$ Stems with more than 100 occurrences (XXXX) coded for broad activi
 
 \bigskip
 
-$\rightarrow$ XXXX entries with coordinates and activities
+$\rightarrow$ XXXX entries with coordinates and classified activities
 
 
 
@@ -481,7 +481,7 @@ $\rightarrow$ Lagged correlations in time between activities
 
 \bigskip
 
-$\rightarrow$ On the sample dataset, $\tau = 1$ (3 exploitable dates)
+%$\rightarrow$ On the sample dataset, $\tau = 1$ (3 exploitable dates)
 
 
 }
