--- a/Docs/Communications/2022/CCS2022/presentation/slides.tex
+++ b/Docs/Communications/2022/CCS2022/presentation/slides.tex
@@ -68,7 +68,10 @@
 
 
 
-\title{Quantifying the co-evolution of economic activities locations with geo-historical data: Paris, 19th century}
+%\title{Quantifying the co-evolution of economic activities locations with geo-historical data: Paris, 19th century}
+% Seminar (same pres): 30/03/2023 - JR UGE IGN ENSG
+% Données socio-historiques et co-evolution urbaine : le projet Soduco
+\title{Socio-historical data and urban co-evolution: the SoDUCo project}
 
 \author{J.~Raimbault$^{1,2,3,4, \ast}$ and J.~Perret$^{1}$\\
 $\ast$\texttt{juste.raimbault@ign.fr}
@@ -82,9 +85,13 @@ $^{4}$UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 }
 
 
-\date{\textbf{CCS 2022}\\
-Session Urban structure\\
-17/10/2022
+%\date{\textbf{CCS 2022}\\
+%Session Urban structure\\
+%17/10/2022
+%}
+% JR 30/03/2023
+\date{\textit{Journ{\'e}e de la Recherche UGE-IGN-ENSG 2023}\\
+30/03/2023
 }
 
 
@@ -566,7 +573,8 @@ $\rightarrow$ Endogenous spatial neighbourhoods to estimate correlations, using 
 
 \medskip
 
-$\rightarrow$ Benchmark of methods to measure co-evolution (instrumental variables, causal machine learning).
+$\rightarrow$ Benchmark of methods to measure co-evolution (instrumental variables, causal machine learning, transfer entropy).
+% add JR 30/03/2023: TE
 
 
 }
